--- a/proxyconfig.json
+++ b/proxyconfig.json
@@ -1,6 +1,6 @@
 {
   "/api": {
-    "target": "http://localhost:3000",
+    "target": "http://musicapi.leanapp.cn",
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true,
